# Multithreaded-HTTP-Server

./: .gitignore  CMakeLists.txt  README.md
bench/: bench.conf  compare.sh  compare_highconc.sh  results.md  run_bench.sh  start_ours.sh  test_drain.sh  test_shutdown.sh
include/: connection.h  http_parser.h  http_response.h  router.h  server.h  thread_pool.h
src/: http_parser.cpp  http_response.cpp  main.cpp  router.cpp  server.cpp  thread_pool.cpp
static/: index.html
